--- a/src/components/ui/Card/index.module.less
+++ b/src/components/ui/Card/index.module.less
@@ -12,6 +12,10 @@
     opacity: 0.5;
     pointer-events: none;
   }
+
+  .container {
+    overflow: scroll;
+  }
 }
 
 .header {
