--- a/src/pages/case-management-item/components/TransactionDetailsCard/TransactionInfoCard/index.module.less
+++ b/src/pages/case-management-item/components/TransactionDetailsCard/TransactionInfoCard/index.module.less
@@ -2,6 +2,7 @@
 
 .root {
   flex: 1;
+  min-width: 300px;
 }
 
 .fields {
