--- a/src/pages/transactions-item/UserDetails/index.module.less
+++ b/src/pages/transactions-item/UserDetails/index.module.less
@@ -2,6 +2,7 @@
 
 .root {
   flex: 1;
+  min-width: 300px;
 
   &.type-ORIGIN {
     background: fade(@fr-colors-redTint, 25%);
