--- a/src/pages/users-item/UserDetails/BusinessUserDetails/UserDetails/index.module.less
+++ b/src/pages/users-item/UserDetails/BusinessUserDetails/UserDetails/index.module.less
@@ -1,26 +1,20 @@
 @import 'src/components/ui/colors.less';
 
-.item {
-  width: 800px;
+.container {
+  width: fit-content;
 }
 
 .section {
   border-right: 1px solid #dfe6f2;
 }
 
-.all {
-  width: 700px;
-}
-
 .details {
   border-right: 1px solid #dfe6f2;
-  width: 430px;
-  left: 40px;
+  width: 345px;
 }
 
 .address {
-  width: 430px;
-  left: 40px;
+  width: 353px;
 }
 
 .border {
