--- a/src/pages/users-item/UserDetails/ConsumerUserDetails/UserDetails/index.module.less
+++ b/src/pages/users-item/UserDetails/ConsumerUserDetails/UserDetails/index.module.less
@@ -1,12 +1,15 @@
 @import 'src/components/ui/colors.less';
 
+.container {
+  width: fit-content;
+}
+
 .address {
-  width: 430px;
-  left: 40px;
+  width: 353px;
 }
 
 .all {
-  width: 700px;
+  width: 687px;
 }
 
 .section {
@@ -15,8 +18,7 @@
 
 .contact {
   border-right: 1px solid #dfe6f2;
-  width: 430px;
-  left: 40px;
+  width: 345px;
 }
 
 .border {
